--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		background: rgb(255 255 255 / 50%);
+		background: #ffd90021;
 		border: 5px dashed #999;
 		z-index: 11;
 		align-items: center;
